--- a/IsoCountries/IsoCountries.csproj
+++ b/IsoCountries/IsoCountries.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Reference Include="NGS.Templater.Standard, Version=1.3.0.41879, Culture=neutral, PublicKeyToken=8aeadf7d6b16ce07, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libraries\NGS.Templater.Standard.dll</HintPath>
+      <HintPath>libs\NGS.Templater.Standard.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
