--- a/IsoCountries/IsoCountries.csproj
+++ b/IsoCountries/IsoCountries.csproj
@@ -50,9 +50,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NGS.Templater.Standard, Version=1.3.0.41879, Culture=neutral, PublicKeyToken=8aeadf7d6b16ce07, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>libs\NGS.Templater.Standard.dll</HintPath>
+    <Reference Include="NGS.Templater.Standard">
+      <HintPath>Libs\NGS.Templater.Standard.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -65,19 +64,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmCountries.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmCountries.Designer.cs">
-      <DependentUpon>frmCountries.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportEngine.cs" />
     <Compile Include="Threading.cs" />
     <Compile Include="WebCountries.cs" />
-    <EmbeddedResource Include="frmCountries.resx">
-      <DependentUpon>frmCountries.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -98,7 +97,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="template.xlsx">
+    <None Include="Templates\Countries.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
