--- a/FoodOrder/FoodOrder.Web/FoodOrder.Web.csproj
+++ b/FoodOrder/FoodOrder.Web/FoodOrder.Web.csproj
@@ -90,7 +90,12 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App_Data\Order.docx" />
+    <Content Include="App_Data\Order.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\Order.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
