--- a/FoodOrder/FoodOrder.Web/FoodOrder.Web.csproj
+++ b/FoodOrder/FoodOrder.Web/FoodOrder.Web.csproj
@@ -36,8 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="NGS.Templater.Standard">
-      <HintPath>..\Libs\NGS.Templater.Standard.dll</HintPath>
+    <Reference Include="NGS.Templater">
+      <HintPath>..\Libs\NGS.Templater.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.ApplicationServices" />
