--- a/IsoCountries/IsoCountries.csproj
+++ b/IsoCountries/IsoCountries.csproj
@@ -50,8 +50,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NGS.Templater.Standard">
-      <HintPath>Libs\NGS.Templater.Standard.dll</HintPath>
+    <Reference Include="NGS.Templater">
+      <HintPath>Libs\NGS.Templater.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
