New excel example.

--- a/SalesOrderMVP/SalesOrderMVP.csproj
+++ b/SalesOrderMVP/SalesOrderMVP.csproj
@@ -140,6 +140,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Templates\SalesOrderItem.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Templates\SalesOrderGrid.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
