--- a/Beginner/WebExample (.NET)/TemplaterWeb.csproj
+++ b/Beginner/WebExample (.NET)/TemplaterWeb.csproj
@@ -35,7 +35,8 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="NGS.Templater">
-      <HintPath>.\Libs\NGS.Templater.dll</HintPath>
+      <HintPath>..\..\packages\Templater.2.1.5\lib\Net40\NGS.Templater.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -75,6 +76,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
+    <None Include="Readme.md" />
     <None Include="template.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
