--- a/Advanced/SalesOrderMVP (.NET)/App.config
+++ b/Advanced/SalesOrderMVP (.NET)/App.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-  </startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true"></startup>
 </configuration>
