--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>Beginner/PushDownExample (Java)</module>
         <module>Intermediate/CollapseRegion (Java)</module>
         <module>Intermediate/BoolOverride (Java)</module>
+        <module>Intermediate/LimitPlugins (Java)</module>
         <module>Intermediate/ResultSetExample (Java)</module>
         <module>Intermediate/TemplaterJson (Java)</module>
         <module>Advanced/TemplaterServer (Java)</module>
@@ -62,6 +63,11 @@
         <dependency>
             <groupId>hr.ngs.templater.example</groupId>
             <artifactId>resultset-example</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>limits-example</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
