--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>Intermediate/BoolOverride (Java)</module>
         <module>Intermediate/LimitPlugins (Java)</module>
         <module>Intermediate/ResultSetExample (Java)</module>
+        <module>Intermediate/Formulas (Java)</module>
         <module>Intermediate/TemplaterJson (Java)</module>
         <module>Advanced/TemplaterServer (Java)</module>
     </modules>
@@ -83,6 +84,11 @@
         <dependency>
             <groupId>hr.ngs.templater.example</groupId>
             <artifactId>bool-override-example</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>formula-example</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
