--- a/Advanced/TemplaterServer (Java)/pom.xml
+++ b/Advanced/TemplaterServer (Java)/pom.xml
@@ -40,9 +40,9 @@
             <version>2.1.5</version>
         </dependency>
         <dependency>
-            <groupId>fi.iki.elonen</groupId>
+            <groupId>org.nanohttpd</groupId>
             <artifactId>nanohttpd</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.dslplatform</groupId>
