Templater v2.3.1. New Java example.
Show how Templater copes with a shared collection.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>Beginner/PivotExample (Java)</module>
         <module>Intermediate/CollapseRegion (Java)</module>
         <module>Intermediate/BoolOverride (Java)</module>
+        <module>Intermediate/SharedCollection (Java)</module>
         <module>Intermediate/LimitPlugins (Java)</module>
         <module>Intermediate/ResultSetExample (Java)</module>
         <module>Intermediate/DocxImport (Java)</module>
@@ -81,6 +82,11 @@
         <dependency>
             <groupId>hr.ngs.templater.example</groupId>
             <artifactId>bool-override-example</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>shared-collection-example</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
