Links in Excel. Example for Java.
Show how Templater can rewrite link tags in Excel.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>Beginner/NamedRange (Java)</module>
         <module>Beginner/PushDownExample (Java)</module>
         <module>Beginner/PivotExample (Java)</module>
+        <module>Beginner/ExcelLinks (Java)</module>
         <module>Intermediate/CollapseRegion (Java)</module>
         <module>Intermediate/BoolOverride (Java)</module>
         <module>Intermediate/SharedCollection (Java)</module>
@@ -52,6 +53,11 @@
         <dependency>
             <groupId>hr.ngs.templater.example</groupId>
             <artifactId>dynamic-resize</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>excel-links-example</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
