--- a/Advanced/SheetReport (Java)/pom.xml
+++ b/Advanced/SheetReport (Java)/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hr.ngs.templater.example</groupId>
-    <artifactId>html-excel-example</artifactId>
+    <artifactId>sheet-report-example</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
-    <name>FormulaExample</name>
+    <name>SheetReportExample</name>
     <url>https://github.com/ngs-doo/TemplaterExamples</url>
 
     <properties>
@@ -38,11 +38,6 @@
             <groupId>hr.ngs.templater</groupId>
             <artifactId>templater</artifactId>
             <version>2.6.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.docx4j</groupId>
-            <artifactId>docx4j-ImportXHTML</artifactId>
-            <version>3.3.0</version>
         </dependency>
     </dependencies>
 
