--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>Intermediate/Formulas (Java)</module>
         <module>Intermediate/Pictures (Java)</module>
         <module>Intermediate/TemplaterJson (Java)</module>
+        <module>Advanced/SheetReport (Java)</module>
         <module>Advanced/TemplaterServer (Java)</module>
     </modules>
 
@@ -130,6 +131,11 @@
         <dependency>
             <groupId>hr.ngs.templater</groupId>
             <artifactId>templater-json</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>sheet-report-example</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
