--- a/Advanced/XmlBinding (Java)/pom.xml
+++ b/Advanced/XmlBinding (Java)/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hr.ngs.templater.example</groupId>
-    <artifactId>list-example</artifactId>
+    <artifactId>xml-binding-example</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
-    <name>ListExample</name>
+    <name>XmlBindingExample</name>
     <url>https://github.com/ngs-doo/TemplaterExamples</url>
 
     <properties>
@@ -17,11 +17,6 @@
             <groupId>hr.ngs.templater</groupId>
             <artifactId>templater</artifactId>
             <version>2.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.8.2</version>
         </dependency>
     </dependencies>
 
