Some more Java examples
The simples way to insert an image into the document.
Show how to provide alternative value on specific inputs. Use thread local to provide additional context information to Templater plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,13 @@
         <module>Beginner/ListExample (Java)</module>
         <module>Beginner/MapExample (Java)</module>
         <module>Beginner/DynamicResize (Java)</module>
+        <module>Beginner/ImageExample (Java)</module>
         <module>Beginner/NamedRange (Java)</module>
         <module>Beginner/PushDownExample (Java)</module>
         <module>Beginner/PivotExample (Java)</module>
         <module>Beginner/ExcelLinks (Java)</module>
         <module>Intermediate/CollapseRegion (Java)</module>
+        <module>Intermediate/AlternativeProperty (Java)</module>
         <module>Intermediate/BoolOverride (Java)</module>
         <module>Intermediate/HtmlToExcel (Java)</module>
         <module>Intermediate/SharedCollection (Java)</module>
