Continuation of .NET and Java project merging
Each example should be shown for both languages.

--- a/Beginner/SimpleSpreadsheet/SimpleSpreadsheet.csproj
+++ b/Beginner/SimpleSpreadsheet/SimpleSpreadsheet.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4C158D75-A416-460F-8F7B-57B0A4815C1A}</ProjectGuid>
+    <ProjectGuid>{0F002123-D175-4741-8CCF-09FE09BDD98D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExternalLinks</RootNamespace>
-    <AssemblyName>ExternalLinks</AssemblyName>
+    <RootNamespace>SimpleSpreadsheet</RootNamespace>
+    <AssemblyName>SimpleSpreadsheet</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -44,7 +44,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -53,10 +52,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Links.docx">
+    <None Include="template\MySpreadsheet.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
