--- a/Beginner/SimpleDocument/SimpleDocument.csproj
+++ b/Beginner/SimpleDocument/SimpleDocument.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0F002123-D175-4741-8CCF-09FE09BDD98D}</ProjectGuid>
+    <ProjectGuid>{172BA03B-8863-4724-B22D-0DFD205CCF46}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SimpleSpreadsheet</RootNamespace>
-    <AssemblyName>SimpleSpreadsheet</AssemblyName>
+    <RootNamespace>SimpleDocument</RootNamespace>
+    <AssemblyName>SimpleDocument</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -51,13 +51,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <None Include="MySpreadsheet.xlsx">
+    <None Include="template\MyDocument.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
     <None Include="Readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
