--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <module>Intermediate/WordTables</module>
         <module>Intermediate/TemplaterJson (Java)</module>
         <module>Advanced/SheetReport (Java)</module>
-        <module>Advanced/XmlBinding (Java)</module>
+        <module>Advanced/XmlBinding</module>
         <module>Advanced/TemplaterServer (Java)</module>
     </modules>
 
