--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,12 @@
         <module>Beginner/ListExample (Java)</module>
         <module>Beginner/MapExample (Java)</module>
         <module>Beginner/DynamicResize</module>
-        <module>Beginner/ImageExample (Java)</module>
+        <module>Beginner/ImageExample</module>
+        <module>Beginner/Labels</module>
         <module>Beginner/NamedRange (Java)</module>
         <module>Beginner/PushDownExample (Java)</module>
         <module>Beginner/PivotExample (Java)</module>
-        <module>Beginner/ExcelLinks (Java)</module>
+        <module>Beginner/ExcelLinks</module>
         <module>Beginner/WordLinks</module>
         <module>Intermediate/CollapseRegion (Java)</module>
         <module>Intermediate/AlternativeProperty (Java)</module>
@@ -75,6 +76,11 @@
         <dependency>
             <groupId>hr.ngs.templater.example</groupId>
             <artifactId>dynamic-resize</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>labels-example</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
